Fixed scroll-snap issue with fixed header (and overlapping)

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 	font-family: pangramRegular;
 	background: #0c0d0c;
 	color: white;
+	scroll-snap-type: y mandatory;
 }
 
 a {
@@ -67,8 +68,6 @@ nav {
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
-	overflow-y: scroll;
-	scroll-snap-type: y mandatory;
 }
 
 .professional {
